# edl-ml

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  dvc.yaml  mkdocs.yml  mypy.ini  params.yaml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/api/: data.md  ml.md  physics.md  viz.md
docs/assets/: permutation_importance.txt
docs/guides/: cli.md  ml.md  physics.md
notebooks/: 01_walkthrough.ipynb
scripts/: generate_demo_figures.py
src/edl_ml/: __init__.py
src/edl_ml/cli/: __init__.py  main.py
src/edl_ml/data/: __init__.py  features.py  generate.py
src/edl_ml/ml/: __init__.py  dataset.py  explain.py  model.py  train.py  tune.py
src/edl_ml/physics/: __init__.py  constants.py  gcs.py  pb.py
src/edl_ml/viz/: __init__.py  diagnostics.py
tests/: conftest.py  test_cli.py  test_data.py  test_gcs.py  test_ml.py  test_pb.py  test_viz.py
