[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "edl-ml"
dynamic = ["version"]
description = "ML-augmented electric double layer simulator for ion adsorption."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Defne Nihal Ertugrul", email = "defnertugrul@gmail.com" },
]
keywords = [
  "electrochemistry",
  "double-layer",
  "poisson-boltzmann",
  "machine-learning",
  "surrogate-model",
  "chemical-engineering",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "torch>=2.0",
  "pyarrow>=14.0",
  "pyDOE2>=1.3",
]

[project.optional-dependencies]
ml = [
  "optuna>=3.5",
  "mlflow>=2.10",
  "shap>=0.44",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
]
viz = [
  "seaborn>=0.13",
  "plotly>=5.18",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
  "mkdocs-jupyter>=0.24",
]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "pre-commit>=3.6",
  "nox>=2024.4.15",
  "types-setuptools",
]
all = [
  "edl-ml[ml,viz,docs,dev]",
]

[project.urls]
Homepage = "https://github.com/defnalk/edl-ml"
Documentation = "https://defnalk.github.io/edl-ml"
Issues = "https://github.com/defnalk/edl-ml/issues"
Changelog = "https://github.com/defnalk/edl-ml/blob/main/CHANGELOG.md"

[project.scripts]
edl = "edl_ml.cli.main:main"

[tool.hatch.version]
path = "src/edl_ml/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/edl_ml"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:torch.*",
  "ignore::DeprecationWarning:_pytest.*",
  "ignore::FutureWarning:optuna.*",
  "ignore::UserWarning:torch.*",
]

[tool.coverage.run]
source = ["edl_ml"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
show_missing = true
